<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.math.mycal.HomeActivity"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E3BA80"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="Calculator"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:textStyle="bold|normal"
                    tools:ignore="HardcodedText"
                    android:gravity="center"

                    />





        </androidx.appcompat.widget.Toolbar>

        //-------------------------------------------------------------------------

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:id="@+id/normal"
                android:layout_width="160dp"
                android:layout_height="168dp"
                android:layout_marginRight="30dp"
                android:background="@color/cardview_shadow_end_color"
                android:backgroundTint="#78909C"
                app:cardCornerRadius="10dp"
                app:cardMaxElevation="10dp">

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="154dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">


                    <de.hdodenhof.circleimageview.CircleImageView

                        android:layout_width="91dp"
                        android:layout_height="94dp"
                        android:layout_gravity="center"
                        android:src="@drawable/normal"
                        tools:ignore="InefficientWeight" />

                    <TextView
                        android:layout_width="230dp"
                        android:layout_height="59dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="serif-monospace"
                        android:gravity="center"
                        android:text="@string/normal"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/percentage"
                android:layout_width="160dp"
                android:layout_height="168dp"
                android:background="@color/cardview_shadow_end_color"
                android:backgroundTint="#78909C"
                app:cardCornerRadius="10dp"
                app:cardMaxElevation="50dp">

                <LinearLayout

                    android:layout_width="150dp"
                    android:layout_height="168dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView

                        android:layout_width="86dp"
                        android:layout_height="84dp"
                        android:src="@drawable/per" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="57dp"
                        android:layout_margin="5dp"
                        android:fontFamily="serif-monospace"
                        android:gravity="center"
                        android:text="@string/percentage"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        //-------------------------------------------------------------------------

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/gst"
                android:layout_width="160dp"
                android:layout_height="168dp"
                android:layout_marginRight="30dp"
                android:background="@color/cardview_shadow_end_color"
                android:backgroundTint="#78909C"
                app:cardCornerRadius="10dp"
                app:cardMaxElevation="50dp">

                <LinearLayout

                    android:layout_width="150dp"
                    android:layout_height="168dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView

                        android:layout_width="98dp"
                        android:layout_height="95dp"
                        android:src="@drawable/gst" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="serif-monospace"
                        android:gravity="center"
                        android:text="@string/gst"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            //-------------------------------------------------------------------------

            <androidx.cardview.widget.CardView
                android:id="@+id/bmi"
                android:layout_width="160dp"
                android:layout_height="168dp"
                android:background="@color/cardview_shadow_end_color"
                android:backgroundTint="#78909C"
                app:cardCornerRadius="10dp"
                app:cardMaxElevation="50dp">

                <LinearLayout

                    android:layout_width="159dp"
                    android:layout_height="168dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView

                        android:layout_width="98dp"
                        android:layout_height="95dp"
                        android:src="@drawable/bmi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="serif-monospace"
                        android:gravity="center"
                        android:text="@string/bmi"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        //-------------------------------------------------------------------------

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/length"
                android:layout_width="160dp"
                android:layout_height="168dp"
                android:background="@color/cardview_shadow_end_color"
                android:backgroundTint="#78909C"
                app:cardCornerRadius="10dp"
                app:cardMaxElevation="50dp"
                android:layout_marginRight="30dp">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView

                        android:layout_width="98dp"
                        android:layout_height="95dp"
                        android:src="@drawable/length" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="serif-monospace"
                        android:gravity="center"
                        android:text="@string/length"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/weight"
                android:layout_width="160dp"
                android:layout_height="168dp"
                android:background="@color/cardview_shadow_end_color"
                android:backgroundTint="#78909C"
                app:cardCornerRadius="10dp"
                app:cardMaxElevation="50dp">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView

                        android:layout_width="98dp"
                        android:layout_height="95dp"
                        android:src="@drawable/weights" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="serif-monospace"
                        android:gravity="center"
                        android:text="@string/weight"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        //-------------------------------------------------------------------------
</LinearLayout>

</ScrollView>
